--- a/style.css
+++ b/style.css
@@ -13,8 +13,7 @@
 body{
     Font-size: 15px;
     margin: 0;
-    /* EYES PROTECTOR */
-    background-color: rgb(56, 55, 55);
+    background-color: var(--Bg-headings-buttons)
 }
 
 /* Main Card */
@@ -94,11 +93,32 @@ body{
 footer{
     position: absolute;
     text-align: center;
-    font-size: 1.2rem;
-    bottom: 5px;
+    bottom: 0;
+    padding: 15px;
     width: 100%;
-    color: white;
+    color: black;
+    font-weight: 900;
+    font-size: 0.8rem;
+    font-family: Arial, Helvetica, sans-serif;
 }
-footer a{
-    color: rgb(155, 62, 243);
+
+@media screen and (max-width: 933px){
+    body{
+        height: 1450px;
+        position: relative;
+    }
+    .container{
+        height: 1450px;
+    }
+    .main-card{
+        width: 340px;
+        height: 1350px;
+        grid-template-columns: 1fr;
+    }
+    .sedans-card{
+        border-radius: 10px 10px 0 0;
+    }
+    .luxury-card{
+        border-radius: 0 0 10px 10px;
+    }
 }
